manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${IMAGE_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: ${IMAGE_NAME}
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: ${IMAGE_NAME}
  template:
    metadata:
      labels:
        app: ${IMAGE_NAME}
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        runAsNonRoot: true
      serviceAccountName: concise-aks
      containers:
        - name: {IMAGE_NAME}
          image: ${DOCKERHUB_REGISTRY}/${DOCKERHUB_USER}/${IMAGE_NAME}:${TAG_NAME}
          volumeMounts:
            # override static config.js with env.yaml mapping
            - name: config
              mountPath: "/usr/share/nginx/html/config.js"
              subPath: "config.js"
          imagePullPolicy: Always
          resources:
            requests:
              memory: ${MEMORY_REQUEST}
              cpu: ${CPU_REQUEST}
            limits:
              memory: ${MEMORY_LIMIT}
              cpu: ${CPU_LIMIT}
          ports:
            - containerPort: 8080
              name: http
      volumes:
        - name: config
          configMap:
            name: concise-aks-env
            items:
              - key: "web.properties"
                path: "config.js"
